# RenderSandbox

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt  RenderContext.hpp  Window.hpp
res/: download_sponza.py
res/shaders/: FS_Simple.glsl
src/: CMakeLists.txt  Window.cpp  main.cpp
